--- a/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
@@ -32,10 +32,12 @@
                         <div class="mx-2">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                                 <mat-form-field class="w-6/12 mat-form-field-fluid w-full" appearance="outline">
-                                    <mat-label class="customMatLabel">Loancase NO: <strong class="matMandatory">*</strong>
+                                    <mat-label class="customMatLabel">Loancase NO: <strong
+                                        class="matMandatory">*</strong>
                                     </mat-label>
                                     <input matInput formControlName="LcNo" readonly>
-                                    <mat-error *ngIf="hasError('DocumentRefNo', 'required')">LcNo <strong>required</strong>
+                                    <mat-error *ngIf="hasError('DocumentRefNo', 'required')">LcNo
+                                        <strong>required</strong>
                                     </mat-error>
                                 </mat-form-field>
                                 <input type="button" mat-raised-button color="primary"
@@ -70,7 +72,8 @@
                         <div class="mx-2">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                    <mat-label class="customMatLabel">Loan Doc Type:<strong class="matMandatory">*</strong>
+                                    <mat-label class="customMatLabel">Loan Doc Type:<strong
+                                        class="matMandatory">*</strong>
                                     </mat-label>
                                     <mat-select formControlName="DocLoanId">
                                         <!--                                    <mat-option>-->
@@ -91,47 +94,48 @@
                     </div>
 
 
-
                     <div class="kt-portlet__head-label flex w-full">
                         <h6 class="heading w-full">Documents Information</h6>
                     </div>
                     <div class="flex" style="flex-wrap: wrap;">
-                    <div class="mx-2">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Documents:<strong class="matMandatory">*</strong>
-                                </mat-label>
-                                <mat-select formControlName="ParentDocId">
-                                    <!--                                    <mat-option>-->
-                                    <!--                                        <ngx-mat-select-search placeholderLabel="Search Loan Type..." (focusout)="validateLoanTypeOnFocusOut()" noEntriesFoundLabel="No Loan Type Found" (keyup)="searchLoanType($event.target.value)">-->
-                                    <!--                                        </ngx-mat-select-search>-->
-                                    <!--                                    </mat-option>-->
-                                    <mat-option *ngFor="let documentType of SelectedDocument" [value]="documentType.Id">
-                                        {{documentType.Name }}
-                                    </mat-option>
-                                </mat-select>
-                                <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id
-                                    <strong>required</strong></mat-error>
-                            </mat-form-field>
-                        </div>
-
-                    </div>
-
-                    <div class="mx-2">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                        <div class="mx-2">
+                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                    <mat-label class="customMatLabel">Document Ref No. <strong
-                                        class="matMandatory">*</strong></mat-label>
-                                    <input matInput formControlName="DocumentRefNo">
-                                    <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Document Ref No <strong>required</strong>
-                                    </mat-error>
+                                    <mat-label class="customMatLabel">Documents:<strong class="matMandatory">*</strong>
+                                    </mat-label>
+                                    <mat-select formControlName="ParentDocId" disabled>
+                                        <!--                                    <mat-option>-->
+                                        <!--                                        <ngx-mat-select-search placeholderLabel="Search Loan Type..." (focusout)="validateLoanTypeOnFocusOut()" noEntriesFoundLabel="No Loan Type Found" (keyup)="searchLoanType($event.target.value)">-->
+                                        <!--                                        </ngx-mat-select-search>-->
+                                        <!--                                    </mat-option>-->
+                                        <mat-option *ngFor="let documentType of SelectedDocument"
+                                                    [value]="documentType.Id">
+                                            {{documentType.Name }}
+                                        </mat-option>
+                                    </mat-select>
+                                    <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id
+                                        <strong>required</strong></mat-error>
                                 </mat-form-field>
                             </div>
+
                         </div>
-                    </div>
-                    <div class="mx-2">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+
+                        <div class="mx-2">
+                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                        <mat-label class="customMatLabel">Document Ref No. <strong
+                                            class="matMandatory">*</strong></mat-label>
+                                        <input matInput formControlName="DocumentRefNo">
+                                        <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Document Ref No
+                                            <strong>required</strong>
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mx-2">
+                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <mat-label class="customMatLabel">No of Files to Upload<strong class="matMandatory">*</strong>
                                     </mat-label>
@@ -144,8 +148,6 @@
                         </div>
 
 
-
-
                         <div class="mx-2">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -155,7 +157,6 @@
                             </div>
                         </div>
                     </div>
-
 
 
                     <div class="kt-portlet__head-label flex w-full">
@@ -175,11 +176,12 @@
                                 </thead>
                                 <tbody class="bg-white">
 
-                                <tr  *ngFor="let item of [].constructor(number_of_files); let i = index">
+                                <tr *ngFor="let item of [].constructor(number_of_files); let i = index">
                                     <td>
                                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
                                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                                                 <input formControlName="file" type="file" id="file_{{i}}"
+                                                       accept="image/png, image/jpg, image/jpeg"
                                                        (change)="onFileChange($event)">
                                             </div>
                                         </div>
@@ -197,11 +199,12 @@
                                     </td>
                                     <td>
                                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
-                                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="font-size: 14px;"  >
+                                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0"
+                                                 style="font-size: 14px;">
                                                 <mat-form-field class=" mat-form-field-fluid w-full"
                                                                 appearance="outline">
                                                     <mat-label class="customMatLabel">Description</mat-label>
-                                                    <input  matInput formControlName="DescriptionTab"
+                                                    <input matInput formControlName="DescriptionTab"
                                                            id="description_{{i}}">
                                                 </mat-form-field>
                                             </div>
