--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -82,7 +82,7 @@
             <div class="flex flex-auto overflow-scroll shadow-xs rounded-sm bg-gray-50" style="flex-direction: column;" [style.height]="gridHeight">
                 <div class="flex flex-col flex-auto sm:mb-6"
                      >
-                    <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
+                    <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}" matSort #sort1="matSort"
                                matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
                         <ng-container matColumnDef="LoanCaseNo">
@@ -154,8 +154,8 @@
                         <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
                     </mat-table>
 
-                    <div class="mat-table__message" *ngIf="!loading && dataSource.data.length==0">No records found</div>
-                    <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+<!--                    <div class="mat-table__message" *ngIf="!loading && dataSource.data.length==0">No records found</div>-->
+<!--                    <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
 
 
                 </div>
@@ -163,8 +163,21 @@
 
             </div>
 
-            <div class="mat-table__bottom">
-                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
-            </div>
+        <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+            Items per page:
+            <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                        style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                <mat-option [value]="5">5</mat-option>
+                <mat-option [value]="10">10</mat-option>
+                <mat-option [value]="25">25</mat-option>
+                <mat-option [value]="50">50</mat-option>
+            </mat-select>
+            <button (click)="paginate(1)">First</button>
+            <pagination-controls display="inline" (pageChange)="paginate($event)"
+                                 style="display: inline-block;"></pagination-controls>
+            <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+            <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+
+        </div>
     </div>
 </div>
