--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -30,8 +30,13 @@
                     <search-loan-cases-by-cnic></search-loan-cases-by-cnic>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText" routerLink="search-loan-case-by-cnic"><p>Search
-                Loan Cases by CNIC</p></mat-card>
+            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText" routerLink="search-loan-case-by-cnic">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                    <p class="text-md text-black">Search
+                    Loan Cases by CNIC</p>
+                </div>
+</mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
@@ -45,8 +50,14 @@
                     <bufrication-of-os-balances-lc></bufrication-of-os-balances-lc>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card (click)="bufrictionOfOSBalances()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-               >Bifurcation of OS balances LC</p></mat-card>
+            <mat-card (click)="bufrictionOfOSBalances()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                <p class="text-md text-black"
+               >Bifurcation of OS balances LC</p>
+            </div>
+            
+            </mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
@@ -60,8 +71,14 @@
                     <updated-list-of-defaulters></updated-list-of-defaulters>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="updated-list" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-                >Updated List of defaulters of a circle for each MCO</p></mat-card>
+            <mat-card routerLink="updated-list" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                
+                
+                <p class="text-md text-black">Updated List of defaulters of a circle for each MCO</p>
+            </div>
+            </mat-card>
         </div>
     </div>
 
@@ -80,9 +97,13 @@
                     <fa-view-circle-wise></fa-view-circle-wise>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="fa-view-wise" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-                >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
-                Charge-off loans for recovery persuasion.</p></mat-card>
+            <mat-card routerLink="fa-view-wise" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                
+                <p class="text-md text-black" >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
+                Charge-off loans for recovery persuasion.</p>
+            </div></mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
@@ -96,33 +117,26 @@
                     <early-warning-reports></early-warning-reports>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="early-warning-reports" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-                >Early warning reports for MCOs</p></mat-card>
+            <mat-card routerLink="early-warning-reports" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                <p class="text-md text-black" >Early warning reports for MCOs</p>
+            </div>
+            </mat-card>
         </div>
 
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card routerLink="loan-amount" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-                >Loan amounts likely to be converted into default</p></mat-card>
-        </div>
-
-    </div>
-
-    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
-
-        <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="voucherPostingDay()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Voucher Posting Day-Booking Report</p></mat-card>
-        </div>
-
-        <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="dailyVoucherProof()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Daily Vouchers Proof List</p></mat-card>
-        </div>
-
-        <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="affidavitForLegalHeirs()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Affidavit For Legal Heirs</p></mat-card>
+            <mat-card routerLink="loan-amount" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                
+                <p class="text-md text-black"
+                >Loan amounts likely to be converted into default</p>
+            </div>
+            
+            </mat-card>
         </div>
 
     </div>
@@ -130,31 +144,87 @@
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="paymentBehavior()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Payment Behavior</p></mat-card>
+            <mat-card (click)="voucherPostingDay()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                <p class="text-md text-black"
+            >Voucher Posting Day-Booking Report</p>
+        </div>
+        </mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="disbursement()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Disbursement Performance Report</p></mat-card>
+            <mat-card (click)="dailyVoucherProof()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                <p class="text-md text-black"
+            >Daily Vouchers Proof List</p>
+        </div></mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="disbursementPurposeWise()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Disbursement Performance (Purpose-Wise) Report</p></mat-card>
+            <mat-card (click)="affidavitForLegalHeirs()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                <p class="text-md text-black"
+            >Affidavit For Legal Heirs</p>
+        </div></mat-card>
+        </div>
+
+    </div>
+
+    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="paymentBehavior()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                <p class="text-md text-black"
+            >Payment Behavior</p>
+        </div></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="disbursement()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                
+                <p class="text-md text-black"
+            >Disbursement Performance Report</p>
+        </div></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="disbursementPurposeWise()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"
+            >
+            <div class="d-grid" style="justify-items: center;">
+                <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+            <p class="text-md text-black"
+            >Disbursement Performance (Purpose-Wise) Report</p>
+        </div></mat-card>
         </div>
 
     </div>
 
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="loanAccountBalance()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Loan Account Balancing</p></mat-card>
+            <mat-card (click)="loanAccountBalance()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                
+                <p class="text-md text-black"
+            >Loan Account Balancing</p>
+        </div></mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="insuranceReport()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-            >Insurance Report</p></mat-card>
+            <mat-card (click)="insuranceReport()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                <p class="text-md text-black"
+            >Insurance Report</p>
+        </div></mat-card>
         </div>
     </div>
 
