--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -300,7 +300,7 @@ button:focus {
   height: 150px ;
   color: #01671B;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  border: 1px solid  rgba(34, 197, 94, var(--tw-border-opacity)) !important;
+  border: 1px solid #22c55e !important;
     }
   }
 }
