--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -9,8 +9,8 @@
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">
+                        color="primary"
+                        aria-expanded="false" aria-controls="collapseExample" onclick="toggleCollapse()">
                     <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
                     <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
