--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -294,5 +294,38 @@
 
     </div>
 
+    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="markOnCA()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+
+                    <p class="text-md text-black"
+                    >Mark On CA Report</p>
+                </div></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="recoverySchedule()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+
+                    <p class="text-md text-black"
+                    >Recovery Schedule</p>
+                </div></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="loanMove()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+
+                    <p class="text-md text-black"
+                    >Loan Move</p>
+                </div></mat-card>
+        </div>
+
+    </div>
 
 </div>
